--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,7 +7,8 @@ on:
     branches: [ "develop" ]
 
 jobs:
-  build:
+  lint-and-test:
+    name: "Go Lint and Test"
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
